# DetectionAnomalie

./: .gitignore  .isort.cfg  .pylintrc  Makefile  README.md  mypy.ini  requirements.txt  requirements_test.txt
.devcontainer/: devcontainer.json
dashboard_ui/: Dockerfile  (+13 more)
data-collection-kedro/: .dockerignore  .gitignore  Dockerfile  README.md  merge_courbe_mouvement.csv  merge_meteo_courbe.csv  merge_process.ipynb  movement_meteo.csv  pyproject.toml  requirements.txt
data-collection-kedro/.viz/: stats.json
data-collection-kedro/airflow_dags/: data_collection_kedro_dag.py
data-collection-kedro/conf/base/: catalog.yml  parameters_data_engineering.yml  parameters_data_fusion_pipeline.yml  parameters_emissions_pipeline.yml  parameters_etl_pipeline.yml
data-collection-kedro/kedro-dataeng-env/: pyvenv.cfg
data-collection-kedro/logs/log_data_fusion_pipeline/: emissions.csv
data-collection-kedro/logs/logs_etl_pipeline/: emissions.csv
data-collection-kedro/src/data_collection_kedro/: __init__.py  __main__.py  pipeline_registry.py  settings.py
data-collection-kedro/src/data_collection_kedro/data/: movement_data_2018_2024.csv
data-collection-kedro/tests/: test_run.py
data-collection-kedro/tests/pipelines/data_engineering/: test_pipeline.py
data-collection-kedro/tests/pipelines/data_fusion_pipeline/: test_pipeline.py
data-collection-kedro/tests/pipelines/data_science/: test_pipeline.py
data-collection-kedro/tests/pipelines/emissions_pipeline/: test_pipeline.py
data-collection-kedro/tests/pipelines/etl_pipeline/: test_pipeline.py  test_transform.py
(+328 files in other folders)
